k8s/istio/serviceentry/customer-fault-abort-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
 name: customer-fault-abort-vs
spec:
 hosts:
 - normal-service-customer-svc
 http:
 - fault:
     abort:
       percentage: 
         value: 100.0
       httpStatus: 403
   route:
   - destination:
       host: normal-service-customer-svc
       version: v1
 #- route:
  # - destination:
       #host: normal-service-customer-svc
       #version: v2
       
   #fault:
     #abort:
       #percent: 100
       #httpStatus: 403
