k8s/istio/serviceentry/httpbin-ext-timeout-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
 name: httpbin-ext-timeout-vs
spec:
 hosts:
 - httpbin.org
 http:
 - timeout: 3s
   route:
   - destination:
       host: httpbin.org
