k8s/istio/serviceentry/httpbin-serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
 name: httpbin-ext
spec:
 hosts:
 - httpbin.org
 ports:
 - number: 80
   name: http
   protocol: HTTP
 resolution: DNS
