k8s/istio/serviceentry/jd-serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
 name: jd-ext
spec:
 hosts:
 - www.jd.com
 ports:
 - number: 443
   name: https
   protocol: HTTPS
 resolution: DNS
